<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微写真</string>
    <string name="menu_settings">设置</string>
    <string name="menu_login">登入</string>
    <string name="menu_logout">退出账户</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_upload">上传写真</string>
    <string name="menu_feedback">发送反馈</string>
    <string name="menu_delete">删除</string>
    <string name="title_activity_main">发现</string>
    <string name="title_activity_detail">图片详情</string>
    <string name="title_activity_comment">评论</string>
    <string name="title_activity_user">用户</string>
    <string name="title_fragment_index">首页</string>
    <string name="title_fragment_feeds">推荐</string>
    <string name="title_fragment_user">用户</string>
    <string name="title_fragment_login">登陆</string>
    <string name="title_fragment_user">用户</string>
    <string name="title_activity_activity_splash">微写真</string>
    <string name="msg_welcome">欢迎使用微写真</string>
    <string name="t_loading">加载中</string>
    <string name="t_load_done">没有更多了</string>
    <string name="t_user_nick">无名氏</string>
    <string name="t_user_intro">签名档</string>
    <string name="t_like">赞</string>
    <string name="t_comment">评论</string>
    <string name="t_download">高清</string>
    <string name="t_help_money">(什么是秀点?)</string>
    <string name="t_upload_cancel">取消</string>
    <string name="t_upload_send">发送</string>
    <string name="title_activity_upload">上传写真</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="d_delete_yes">删除</string>
    <string name="d_delete_no">保留</string>
    <string name="d_upload_ing">图片正在上传中……</string>
    <string name="tab_feeds">推荐</string>
    <string name="tab_index">浏览</string>
    <string name="tab_user">我　</string>

</resources>