<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_picture"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/fragment_picture_loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="192dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/detail_frame"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical" >
    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/detail_bar_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_light_down" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_light"
            android:gravity="center" >

            <Button
                android:id="@+id/detail_btn_like"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/button_like"
                android:text="@string/t_like"
                android:textColor="@color/text_secondary" />

            <Button
                android:id="@+id/detail_btn_comment"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/button_comment"
                android:text="@string/t_comment"
                android:textColor="@color/text_secondary" />

            <Button
                android:id="@+id/detail_btn_download"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/button_download"
                android:paddingLeft="8dp"
                android:text="@string/t_download"
                android:textColor="@color/text_secondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:padding="2dp" >

            <ImageView
                android:id="@+id/detail_btn_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/default_avatar" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>